Pull Request Changes and Style Changes Made changes based off of pull request changes, involving null values in the fields, date formatting, and style changing.
BCK-7000

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -377,3 +377,13 @@ a {
         color: $midnight-blue;
     }
 }
+
+// Extra styles for Alerts
+.error-text {
+    max-width: 350px;
+    color: $red;
+}
+
+.text-muted {
+    max-width: 350px;
+}
