--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -83,6 +83,13 @@ body {
     text-align: center;
 }
 
+.example-notification-bar {
+    width: 100%;
+    padding: .5rem;
+    background-color: #00A0E2;
+    color: white;
+}
+
 // Styles for Home page for Creating Alerts
 
 .error-text {
